# door-alarm-rs

./: Cargo.toml  README.md  Shuttle.toml  esp_freeRTOs.cpp  main.cpp  routes.http
src/: main.rs
static/: index.html  index.js  worker.js
